[FIX] 알림 API 생성과 조회로 분리 및 조회 시 스크롤 적용